--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,23 @@
-version: '3.2'
+version: '3.7'
 
 services:
   web:
     build: .
-    command: python3 src/manage.py runserver 0.0.0.0:8000
+    command: python src/manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/src/base
     ports:
-      - "8000:8000"
-    depends_on: 
+      - 8000:8000
+    depends_on:
       - db
   db:
-    image: postgres
+    image: postgres:12.0-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=test
-      - POSTGRES_DB=db
+      - POSTGRES_USER=hello_django
+      - POSTGRES_PASSWORD=hello_django
+      - POSTGRES_DB=hello_django_dev
+
+volumes:
+  postgres_data:
