--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,16 @@ version: '3.7'
 
 services:
   web:
-    build: .
-    command: python src/manage.py runserver 0.0.0.0:8000
+    build: ./app
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - .:/src/base
+      - .:/app/base
     ports:
       - 8000:8000
     depends_on:
       - db
+    env_file:
+      - ./.env.dev
   db:
     image: postgres:12.0-alpine
     volumes:
