--- a/app/Dockerfile.prod
+++ b/app/Dockerfile.prod
@@ -40,12 +40,6 @@ RUN mkdir -p /home/app
 # create the app user
 RUN addgroup -S app && adduser -S app -G app
 
-# create the appropriate directories
-ENV HOME=/home/app
-ENV APP_HOME=/home/app/web
-RUN mkdir $APP_HOME
-WORKDIR $APP_HOME
-
 # install dependencies
 RUN apk update && apk add libpq
 COPY --from=builder /usr/src/app/wheels /wheels
@@ -55,6 +49,13 @@ RUN pip install --no-cache /wheels/*
 # copy entrypoint-prod.sh
 COPY ./entrypoint.prod.sh $APP_HOME
 
+# create the appropriate directories
+ENV HOME=/home/app
+ENV APP_HOME=/home/app/web
+RUN mkdir $APP_HOME
+RUN mkdir $APP_HOME/staticfiles
+WORKDIR $APP_HOME
+
 # copy project
 COPY . $APP_HOME
 
@@ -63,6 +64,8 @@ RUN chown -R app:app $APP_HOME
 
 # change to the app user
 USER app
+
+
 
 # run entrypoint.prod.sh
 ENTRYPOINT ["/home/app/web/entrypoint.prod.sh"]
