--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -21,15 +21,23 @@ services:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
       - ./.env.prod.db
+  frontend:
+    container_name: frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.prod
+    ports:
+      - '1337:80'
   nginx:
     build: ./nginx
     volumes:
       - static_volume:/home/app/web/staticfiles
       - media_volume:/home/app/web/mediafiles
     ports:
-      - 1337:80
+      - 80:8080
     depends_on:
       - web
+      - frontend
 
 volumes:
   postgres_data:
