--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,20 +2,21 @@ version: '3.7'
 
 services:
   web:
+    container_name: Django
     build:
       context: ./app
       dockerfile: Dockerfile.prod
     command: gunicorn base.wsgi:application --bind 0.0.0.0:8000
-    volumes:
-      - static_volume:/home/app/web/staticfiles
-      - media_volume:/home/app/web/mediafiles
     expose:
       - 8000
+    volumes:
+      - ./app/:/app
     env_file:
       - ./.env.prod
     depends_on:
       - db
   db:
+    container_name: postgressql
     image: postgres:12.0-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
@@ -26,20 +27,13 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile.prod
-    ports:
-      - '1337:80'
   nginx:
+    container_name: nginx
     build: ./nginx
-    volumes:
-      - static_volume:/home/app/web/staticfiles
-      - media_volume:/home/app/web/mediafiles
     ports:
-      - 80:8080
+      - 1337:80
     depends_on:
       - web
-      - frontend
 
 volumes:
   postgres_data:
-  static_volume:
-  media_volume:
