--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   web:
-    container_name: django
+    container_name: Django
     build: ./app
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
