--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-upstream api {
+upstream base {
     server web:8000;
 }
 
@@ -6,25 +6,25 @@ server {
 
     listen 80;
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri $uri/ /index.html;
-    }
-
-    location /api/ {
+    location = / {
         proxy_pass http://base;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
     }
 
-    location /staticfiles/ {
-        alias /home/app/web/staticfiles/;
+    location /admin/ {
+        proxy_pass http://base;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
     }
 
-    location /mediafiles/ {
-        alias /home/app/web/mediafiles/;
+    # ignore cache frontend
+    location ~* (service-worker\.js)$ {    
+        add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';    
+        expires off;    
+        proxy_no_cache 1;
     }
 
 }
