--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -25,8 +25,15 @@ services:
   frontend:
     container_name: frontend
     build:
-      context: ./frontend
+      context: ./frontend/
       dockerfile: Dockerfile.prod
+    volumes:
+      - '.:/app/frontend/'
+      - '/app/frontend/node_modules'
+    ports:
+      - 3000:3000
+    environment:
+      - CHOKIDAR_USEPOLLING=true
   nginx:
     container_name: nginx
     build: ./nginx
