--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -6,7 +6,7 @@
 FROM python:3.8.3-alpine as builder
 
 # set work directory
-WORKDIR /usr/src/app
+WORKDIR /usr/src/backend
 
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
@@ -35,7 +35,7 @@ RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r requir
 FROM python:3.8.3-alpine
 
 # create directory for the app user
-RUN mkdir -p /home/app
+RUN mkdir -p /home/backend
 
 # create the app user
 RUN addgroup -S app && adduser -S app -G app
