removed prod docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3.7'
 
 services:
-  web:
+  backend:
     container_name: Django
-    build: ./app
+    build: ./backend
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - .:/app/base
+      - .:/backend/base
     ports:
       - 8000:8000
     depends_on:
