--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   backend:
-    container_name: Django
+    container_name: backend
     build: ./backend
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
